--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -1,5 +1,9 @@
 //You may append your own styles to the following CSSbut not modify it, but modify only if you need to or should
 
+* {
+  //border: 1px solid;
+}
+
 html,
 body,
 #root {
