--- a/src/styles/_animation.scss
+++ b/src/styles/_animation.scss
@@ -62,3 +62,11 @@
     transform: translateX(100%);
   }
 }
+
+.nav-link-menu {
+  animation: fadeIn 0.5s ease;
+}
+
+.sub-menu {
+  animation: slideIn 0.5s ease;
+}
