--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -1,8 +1,6 @@
 //You may append your own styles to the following CSSbut not modify it, but modify only if you need to or should
 
-* {
-  //border: 1px solid;
-}
+@import 'constants';
 
 html,
 body,
@@ -86,9 +84,27 @@ hr {
   height: 0.2rem;
   border-radius: 0.1rem;
   border: none;
+  background: $theme-color-primary;
 }
 
 button,
 a {
   font-size: 1rem !important;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0 !important;
+}
+
+.logo {
+  color: white;
+
+  img {
+    width: 2.5em;
+  }
 }
