--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -21,6 +21,7 @@ body {
 * {
   box-sizing: border-box;
   font-family: 'Montserrat', 'Trebuchet MS', sans-serif !important;
+  outline: none !important;
   // border: 1px solid deeppink;
 }
 
@@ -39,7 +40,7 @@ body {
       }
 
       &::-webkit-scrollbar-thumb {
-        background: #555 !important;
+        background: $theme-color-primary !important;
       }
     }
   }
@@ -102,9 +103,23 @@ h6 {
 }
 
 .logo {
-  color: white;
+  color: white !important;
+  padding: 0.25rem 0;
+  display: block;
+  font-size: 1.25rem;
 
   img {
     width: 2.5em;
+  }
+
+  a {
+    color: white;
+    font-size: 1.25rem !important;
+  }
+
+  &:focus-within {
+    a {
+      text-decoration: underline;
+    }
   }
 }
