Added Our Business to the Landing Page

--- a/src/styles/Landing.scss
+++ b/src/styles/Landing.scss
@@ -5,3 +5,14 @@
   height: 100vh;
   object-fit: cover;
 }
+.Pad{
+  padding: 2rem;
+}
+
+.Divider{
+  height: 1.5rem;
+}
+
+.Text{
+  padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+}
