--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -1,2 +1,54 @@
-$theme-color-primary: #9d7141;
 $theme-color-primary-faint: rgba(157, 113, 65, 0.25);
+
+// the -v5's are the actual colors. Colors above them are the darker variants while those below lighter
+
+$theme-color-primary: rgb(157, 113, 65); //supposed gold color
+$prim-r: 157;
+$prim-g: 113;
+$prim-b: 65;
+$theme-color-primary-v1: rgb(
+  $prim-r - (22 * 4),
+  $prim-g - (22 * 4),
+  $prim-b - (22 * 4)
+);
+$theme-color-primary-v2: rgb(
+  $prim-r - (22 * 3),
+  $prim-g - (22 * 3),
+  $prim-b - (22 * 3)
+);
+$theme-color-primary-v3: rgb(
+  $prim-r - (22 * 2),
+  $prim-g - (22 * 2),
+  $prim-b - (22 * 2)
+);
+$theme-color-primary-v4: rgb(
+  $prim-r - (22 * 1),
+  $prim-g - (22 * 1),
+  $prim-b - (22 * 1)
+);
+$theme-color-primary-v5: rgb($prim-r, $prim-g, $prim-b);
+$theme-color-primary-v6: rgb(
+  $prim-r + (22 * 1),
+  $prim-g + (22 * 1),
+  $prim-b + (22 * 1)
+);
+$theme-color-primary-v7: rgb(
+  $prim-r + (22 * 2),
+  $prim-g + (22 * 2),
+  $prim-b + (22 * 2)
+);
+$theme-color-primary-v8: rgb(
+  $prim-r + (22 * 3),
+  $prim-g + (22 * 3),
+  $prim-b + (22 * 3)
+);
+$theme-color-primary-v9: rgb(
+  $prim-r + (22 * 4),
+  $prim-g + (22 * 4),
+  $prim-b + (22 * 4)
+);
+
+$success: rgb(27, 136, 27);
+$error: rgb(225, 34, 34);
+$info: rgb(0, 124, 226);
+
