--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -24,6 +24,15 @@
   }
 }
 
+@media screen and (max-width: 991px) {
+  .contact-info-col {
+    padding: {
+      left: 3.5rem;
+      right: 3.5rem;
+    }
+  }
+}
+
 @media screen and (max-width: 767px) {
   // landing page styles
   .landing-splash-box {
@@ -50,6 +59,14 @@
 }
 
 @media screen and (max-width: 599px) {
+  .top-nav-links-wrapper {
+    display: none;
+  }
+
+  .logo {
+    padding: 0.5rem 0;
+  }
+
   .drawer {
     .search {
       display: none;
@@ -59,6 +76,33 @@
   .drawer-nav {
     .search {
       display: inline-flex;
+    }
+  }
+
+  //contact us page responsive styles
+  .contact-page-title {
+    > h1 {
+      font-size: 2.25rem;
+    }
+  }
+
+  .contact-form-header {
+    font-size: 1.5rem;
+  }
+
+  .contact-form-container {
+    padding: 0;
+  }
+
+  .contact-form-col {
+    padding: 3.5rem 2rem;
+    background-color: white;
+  }
+
+  .contact-info-col {
+    padding: {
+      left: 2rem;
+      right: 2rem;
     }
   }
 }
