--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -156,6 +156,9 @@ h6 {
 .theme-color-text {
   color: $theme-color-primary;
 }
+.theme-color-text-lightest {
+  color: $theme-color-primary-v9;
+}
 
 .theme-color-bg {
   background-color: $theme-color-primary;
