--- a/src/styles/_Header.scss
+++ b/src/styles/_Header.scss
@@ -61,7 +61,7 @@
   align-items: center;
   margin: 0 1rem;
   padding: 1.5rem 0.5rem;
-  color: #eee !important;
+  color: $theme-color-primary-v9 !important;
   background: unset;
   z-index: 2;
   text-transform: capitalize !important;
@@ -79,11 +79,13 @@
     bottom: calc(20% + 0.25em);
     left: -1rem;
     z-index: -1;
-    background-color: #865f36;
+    background-color: $theme-color-primary-v6;
     transition: 0.3s;
   }
 
   &::before {
+    left: 50%;
+    bottom: 0em;
     height: 2px;
   }
 
@@ -92,10 +94,9 @@
     color: white !important;
 
     &::before {
-      width: 100%;
-      max-width: 50%;
+      width: calc(100% - 1em);
       left: 0.5rem;
-      background-color: #eee;
+      background-color: white;
     }
 
     .nav-icon {
@@ -110,12 +111,14 @@
   }
 
   &.active {
+    color: white !important;
+
     &::before {
       left: 0.5rem;
       max-width: 100%;
       height: 0.125rem;
       width: calc(100% - 1rem) !important;
-      background: #fff; //#9d7141;
+      background: #fff;
     }
 
     .nav-icon {
