--- a/src/styles/_Footer.scss
+++ b/src/styles/_Footer.scss
@@ -1,16 +1,18 @@
-.Footer-Wrapper-One{
+@import 'constants';
+
+.Footer-Wrapper-One {
   height: 10rem;
-  background-color: rgba(157, 113, 65, 0.86);
+  background-color: $theme-color-primary-v5;
 }
 
-.Footer-Wrapper-Two{
+.Footer-Wrapper-Two {
   padding: 1.5rem 0 1rem 0;
   color: #ffffff;
   text-align: left;
-  font-size: .8rem;
-  background-color: #9d7141;
+  font-size: 0.8rem;
+  background-color: $theme-color-primary-v4;
 }
 
-.Footer-Image{
-  height: 100px
+.Footer-Image {
+  height: 100px;
 }
