--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -21,7 +21,7 @@ body,
 }
 
 .debugger {
-  border: 1px solid blue;
+  border: l solid blue;
 }
 
 body {
@@ -89,7 +89,7 @@ a {
   &[class*='Primary'] {
     min-height: 2.5rem;
     border-radius: 0.25rem;
-    background-color: $theme-color-primary;
+    background-color: $theme-color-primary-v4;
     color: white;
 
     &.major-button {
@@ -97,7 +97,7 @@ a {
       height: 3rem;
 
       &:hover {
-        background-color: $theme-color-primary-v4;
+        background-color: $theme-color-primary-v3;
       }
     }
 
@@ -133,12 +133,17 @@ h6 {
 
 .logo {
   color: white !important;
-  padding: 0.25rem 0;
+  padding: 0.25rem;
   display: block;
   font-size: 1.25rem;
+  border-radius: 2rem;
+  margin-left: -0.2rem !important;
+  border: 1px solid transparent;
 
   img {
     width: 2.5em;
+    border-radius: 50%;
+    filter: hue-rotate(-10deg) brightness(90%) contrast(120%);
   }
 
   a {
@@ -147,9 +152,7 @@ h6 {
   }
 
   &:focus-within {
-    a {
-      text-decoration: underline;
-    }
+    border: 1px solid $theme-color-primary-v8;
   }
 }
 
