--- a/src/styles/_Contact.scss
+++ b/src/styles/_Contact.scss
@@ -14,13 +14,14 @@
   .map-wrapper,
   &::before {
     position: absolute;
-    width: 110vw;
+    width: 100%;
     top: 0;
-    left: -4vw;
+    left: 0;
+    right: 0;
     z-index: -1;
     height: 37rem;
-    transition: 0.35s;
-    animation: fromTop 0.5s ease;
+    transition: 0.5s;
+    animation: fromTop 0.75s ease;
   }
 
   @keyframes fromTop {
@@ -40,10 +41,11 @@
   .map-wrapper {
     cursor: pointer;
     opacity: 0.5;
-    box-shadow: 0 0.15rem 0.85rem rgba(0, 0, 0, 0.96);
+    box-shadow: 0 0.15rem 0.35rem rgba(0, 0, 0, 0.75);
     background: {
+      color: #eee;
       image: url('/images/google-map-placeholder.png');
-      position: bottom center;
+      // position: bottom center;
     }
 
     &:hover {
@@ -51,7 +53,7 @@
 
       ~ .contact-form-container {
         .contact-form-wrapper {
-          transform: translateY(7.5rem);
+          transform: translateY(8.5rem);
         }
       }
 
@@ -74,7 +76,7 @@
   > h1 {
     font-weight: bold;
     display: inline-block;
-    transition: 0.35s;
+    transition: 0.5s;
   }
 }
 
@@ -85,8 +87,8 @@
   margin: auto;
   box-shadow: 0 0.25rem 5rem rgba(0, 0, 0, 0.15),
     0 0.25rem 5rem rgba(0, 0, 0, 0.25) !important;
-  animation: fromBottom 0.5s ease;
-  transition: 0.35s;
+  animation: fromBottom 0.75s ease;
+  transition: 0.5s;
 }
 
 .contact-form-col {
