--- a/src/styles/_Header.scss
+++ b/src/styles/_Header.scss
@@ -105,7 +105,8 @@
 
     &::before {
       width: calc(100% - 1em);
-      left: 0.5rem;
+      // left: 0.5rem;
+      transform: translateX(-50%);
       background-color: $theme-color-primary-v7 !important;
     }
 
@@ -114,7 +115,8 @@
     }
 
     + .nav-menu {
-      top: 100%;
+      // top: 100%;
+      transform: translateY(0);
       opacity: 1;
       visibility: visible;
     }
@@ -125,6 +127,7 @@
 
     &::before {
       left: 0.5rem;
+      transform: translateX(0);
       max-width: 100%;
       height: 0.125rem;
       width: calc(100% - 1rem) !important;
@@ -147,7 +150,8 @@
   color: inherit;
   padding: 0.25rem 0;
   background-color: $theme-color-primary-v7;
-  top: 110%;
+  top: 100%;
+  transform: translateY(10%);
   border-radius: 0 0 0.35rem 0.35rem;
   visibility: hidden;
   opacity: 0;
@@ -155,7 +159,8 @@
 
   &:focus-within,
   &:hover {
-    top: 100%;
+    // top: 100%;
+    transform: translateY(0);
     opacity: 1;
     visibility: visible;
   }
@@ -181,7 +186,8 @@
 
       + .sub-menu {
         opacity: 1;
-        left: 100%;
+        // left: 100%;
+        transform: translateX(0);
         visibility: visible;
       }
     }
@@ -190,17 +196,18 @@
   .sub-menu {
     display: flex;
     justify-content: space-between;
-    left: unset;
     top: 0;
     visibility: hidden;
     opacity: 0;
-    left: 110%;
+    left: 100%;
+    transform: translateX(10%);
     z-index: 6;
 
     &:focus-within,
     &:hover {
-      top: 0;
-      left: 100%;
+      // top: 0;
+      // left: 100%;
+      transform: translateX(0);
       opacity: 1;
       visibility: visible;
     }
@@ -243,7 +250,8 @@
     &:focus,
     &:hover {
       + .nav-menu {
-        top: calc(100% + 0.5rem);
+        // top: calc(100% + 0.5rem);
+        transform: translateY(0);
       }
     }
   }
@@ -252,19 +260,23 @@
     left: 15%;
     width: calc(85% - 1rem);
     max-width: 85%;
-    top: 130%;
+    // top: 130%;
+    top: calc(100% + 0.5rem);
+    transform: translateY(0.75rem);
     z-index: 5;
 
     &:focus-within,
     &:hover {
-      top: calc(100% + 0.5rem);
+      // top: calc(100% + 0.5rem);
+      transform: translateY(0);
     }
 
     a {
       &:hover,
       &:focus {
         + .sub-menu {
-          left: 15%;
+          // left: 15%;
+          transform: translateX(0);
         }
       }
     }
@@ -272,13 +284,15 @@
 
   .sub-menu {
     width: 85%;
-    left: 30%;
-    top: 70%;
+    // left: 30%;
+    transform: translateX(15%);
+    top: 65%;
 
     &:focus-within,
     &:hover {
-      top: 70%;
-      left: 15%;
+      // top: 70%;
+      // left: 15%;
+      transform: translateX(0);
     }
   }
 
@@ -307,7 +321,7 @@
   }
 
   .MuiDrawer-paper {
-    width: 80%;
+    width: 75%;
     overflow-x: hidden;
     background: $theme-color-primary-v4;
     max-width: 22rem;
