--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -21,7 +21,7 @@ body,
 }
 
 .debugger {
-  border: l solid blue;
+  border: 1px solid blue;
 }
 
 body {
@@ -74,17 +74,17 @@ input {
 }
 
 a {
-  color: $theme-color-primary;
+  color: $theme-color-primary-v8;
 
   &:visited {
-    color: purple;
+    color: $theme-color-primary-v9;
   }
 }
 
 button,
 a {
   text-transform: unset !important;
-  font-size: 1rem !important;
+  font-size: 1rem;
 
   &[class*='Primary'] {
     min-height: 2.5rem;
@@ -119,7 +119,7 @@ hr {
 
 button,
 a {
-  font-size: 1rem !important;
+  font-size: 1rem;
 }
 
 h1,
@@ -137,6 +137,7 @@ h6 {
   display: block;
   font-size: 1.25rem;
   border-radius: 2rem;
+  min-width: 14rem;
   margin-left: -0.2rem !important;
   border: 1px solid transparent;
 
@@ -148,7 +149,7 @@ h6 {
 
   a {
     color: white;
-    font-size: 1.25rem !important;
+    font-size: inherit;
   }
 
   &:focus-within {
