--- a/src/styles/Landing.scss
+++ b/src/styles/Landing.scss
@@ -3,8 +3,8 @@
   max-height: 100% !important;
 }
 .Slide-Item{
-  height: 100vh;
-  max-height: 100vh;
+  height: 100vh !important;
+  max-height: 100vh !important;
   object-fit: cover;
 }
 .Pad{
