--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -8,14 +8,14 @@ body,
   height: 100vh;
   width: 100%;
   margin: 0;
-  font-size: 1rem;
+  font-size: 1.05rem;
   color: #444;
   line-height: 1.5rem;
 }
 
 * {
   box-sizing: border-box;
-  font-family: 'Montserrat', 'Trebuchet MS', sans-serif !important;
+  font-family: 'Google Sans', 'Montserrat', 'Trebuchet MS', sans-serif !important;
   outline: none !important;
   // border: 1px solid deeppink;
 }
